--- a/index.html
+++ b/index.html
@@ -146,26 +146,26 @@
           <ul class="list work__box">
             <li class="work__item">
               <img srcset="
-              /images/desk-box1-370@x1-min.jpg 1x,
-              /images/desk-box1-740@x2-min.jpg 2x"
-              src="images/desk-box1-370@x1-min.jpg" width="370" 
+              ./images/desk-box1-370@x1-min.jpg 1x,
+              ./images/desk-box1-740@x2-min.jpg 2x"
+              src="./images/desk-box1-370@x1-min.jpg" width="370" 
               alt="Работа за компьютером за столом"/>
               <p class="work__text">ДЕСКТОПНЫЕ ПРИЛОЖЕНИЯ</p>
             </li>
 
             <li class="work__item">
               <img srcset="
-              /images/desk-box2-370@x1-min.jpg 1x,
-              /images/desk-box2-740@x2-min.jpg 2x"
-              src="images/desk-box2-370@x1-min.jpg" width="370" 
+              ./images/desk-box2-370@x1-min.jpg 1x,
+              ./images/desk-box2-740@x2-min.jpg 2x"
+              src="./images/desk-box2-370@x1-min.jpg" width="370" 
               alt="Телефон в руках перед компьютером"/>
               <p class="work__text">МОБИЛЬНЫЕ ПРИЛОЖЕНИЯ</p>
             </li>
             <li class="work__item">
               <img srcset="
-              /images/desk-box3-370@x1-min.jpg 1x,
-              /images/desk-box3-740@x2-min.jpg 2x" 
-              src="images/desk-box3-370@x1-min.jpg" width="370" 
+              ./images/desk-box3-370@x1-min.jpg 1x,
+              ./images/desk-box3-740@x2-min.jpg 2x" 
+              src="./images/desk-box3-370@x1-min.jpg" width="370" 
               alt="планшет на фоне клавиатуры, с рисунком гексограммы"/>
               <p class="work__text">ДИЗАЙНЕРСКИЕ РЕШЕНИЯ</p>
             </li>
@@ -182,13 +182,13 @@
             <li class="team__foto">
               <img class="team__img" 
               srcset="
-                  /images/team-card1-270-desk@x1-min.jpg 270w,
-                  /images/team-card1-354-tab@x1-min.jpg 354w,
-                  /images/team-card1-450-mob@x1-min.jpg 450w, 
-                  /images/team-card1-708-tab@x2-min.jpg 708w,
-                  /images/team-card1-540-desk@x2.jpg 540w,
-                  /images/team-card1-900-mob@x2-min.jpg 900w"
-              src="images/team-card1-450-mob@x1-min.jpg"
+                  ./images/team-card1-270-desk@x1-min.jpg 270w,
+                  ./images/team-card1-354-tab@x1-min.jpg 354w,
+                  ./images/team-card1-450-mob@x1-min.jpg 450w, 
+                  ./images/team-card1-708-tab@x2-min.jpg 708w,
+                  ./images/team-card1-540-desk@x2.jpg 540w,
+                  ./images/team-card1-900-mob@x2-min.jpg 900w"
+              src="./images/team-card1-450-mob@x1-min.jpg"
               sizes="(min-width: 1200px) 270px, (min-width: 768px) 354px (min-width: 480px) 450px"
               alt="фотография сотрудника"/>
               <div class="team__text">
@@ -233,13 +233,13 @@
             <li class="team__foto">
               <img class="team__img" 
               srcset="
-              /images/team-card2-270-desk@x1-min.jpg 270w,
-              /images/team-card2-354-tab@x1-min.jpg 354w,
-              /images/team-card2-450-mob@x1-min.jpg 450w, 
-              /images/team-card2-708-tab@x2-min.jpg 708w,
-              /images/team-card2-540-desk@x2-min.jpg 540w,
-              /images/team-card2-900-mob@x2-min.jpg 900w"
-              src="images/team-card2-450-mob@x1-min.jpg"
+              ./images/team-card2-270-desk@x1-min.jpg 270w,
+              ./images/team-card2-354-tab@x1-min.jpg 354w,
+              ./images/team-card2-450-mob@x1-min.jpg 450w, 
+              ./images/team-card2-708-tab@x2-min.jpg 708w,
+              ./images/team-card2-540-desk@x2-min.jpg 540w,
+              ./images/team-card2-900-mob@x2-min.jpg 900w"
+              src="./images/team-card2-450-mob@x1-min.jpg"
               sizes="(min-width: 1200px) 270px, (min-width: 768px) 354px (min-width: 480px) 450px" 
               alt="фотография сотрудника"/>
               <div class="team__text">
@@ -285,13 +285,13 @@
             <li class="team__foto">
               <img class="team__img" 
               srcset="
-              /images/team-card3-270-desk@x1-min.jpg 270w,
-              /images/team-card3-354-tab@x1-min.jpg 354w,
-              /images/team-card3-450-mob@x1-min.jpg 450w, 
-              /images/team-card3-708-tab@x2-min.jpg 708w,
-              /images/team-card3-540-desk@x2-min.jpg 540w,
-              /images/team-card3-900-mob@x2-min.jpg 900w"
-              src="images/team-card3-450-mob@x1-min.jpg"
+              ./images/team-card3-270-desk@x1-min.jpg 270w,
+              ./images/team-card3-354-tab@x1-min.jpg 354w,
+              ./images/team-card3-450-mob@x1-min.jpg 450w, 
+              ./images/team-card3-708-tab@x2-min.jpg 708w,
+              ./images/team-card3-540-desk@x2-min.jpg 540w,
+              ./images/team-card3-900-mob@x2-min.jpg 900w"
+              src="./images/team-card3-450-mob@x1-min.jpg"
               sizes="(min-width: 1200px) 270px, (min-width: 768px) 354px (min-width: 480px) 450px"
               alt="фотография сотрудника"/>
               <div class="team__text">
@@ -338,13 +338,13 @@
             <li class="team__foto">
               <img class="team__img" 
               srcset="
-              /images/team-card4-270-desk@x1-min.jpg 270w,
-              /images/team-card4-354-tab@x1-min.jpg 354w,
-              /images/team-card4-450-mob@x1-min.jpg 450w, 
-              /images/team-card4-708-tab@x2-min.jpg 708w,
-              /images/team-card4-540-desk@x2-min.jpg 540w,
-              /images/team-card4-900-mob@x2-min.jpg 900w"
-              src="images/team-card4-450-mob@x1-min.jpg"
+              ./images/team-card4-270-desk@x1-min.jpg 270w,
+              ./images/team-card4-354-tab@x1-min.jpg 354w,
+              ./images/team-card4-450-mob@x1-min.jpg 450w, 
+              ./images/team-card4-708-tab@x2-min.jpg 708w,
+              ./images/team-card4-540-desk@x2-min.jpg 540w,
+              ./images/team-card4-900-mob@x2-min.jpg 900w"
+              src="./images/team-card4-450-mob@x1-min.jpg"
               sizes="(min-width: 1200px) 270px, (min-width: 768px) 354px (min-width: 480px) 450px"
               alt="фотография"/>
               <div class="team__text">
