--- a/portfolio.html
+++ b/portfolio.html
@@ -96,14 +96,14 @@
                     <img 
                     class="portfolio-img__icon"
                     srcset="
-                    /images/portfolio-desk/portfolio-1-desk-370@1x-min.jpg 370w,
-                    /images/portfolio-desk/portfolio-1-desk-740@2x-min.jpg 740w,
-                    /images/portfolio-tab/portfolio-1-tab-354@1x-min.jpg 354w, 
-                    /images/portfolio-tab/portfolio-1-tab-708@2x-min.jpg 708w,
-                    /images/portfolio-mob/portfolio-1-mob-450@1x-min.jpg 450w,
-                    /images/portfolio-mob/portfolio-1-mob-900@2x-min.jpg 900w"
+                    ./images/portfolio-desk/portfolio-1-desk-370@1x-min.jpg 370w,
+                    ./images/portfolio-desk/portfolio-1-desk-740@2x-min.jpg 740w,
+                    ./images/portfolio-tab/portfolio-1-tab-354@1x-min.jpg 354w, 
+                    ./images/portfolio-tab/portfolio-1-tab-708@2x-min.jpg 708w,
+                    ./images/portfolio-mob/portfolio-1-mob-450@1x-min.jpg 450w,
+                    ./images/portfolio-mob/portfolio-1-mob-900@2x-min.jpg 900w"
                     sizes="(min-width: 1200px) 370px, (min-width: 768px) 354px (min-width: 480px) 450px" 
-                    src="/images/portfolio-desk/portfolio-1-desk-370@1x-min.jpg" 
+                    src="./images/portfolio-desk/portfolio-1-desk-370@1x-min.jpg" 
                     alt="Ноутбук, на котором открыт фото сотрудников">
                 <p class="portfolio-img__title">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового
                     шпионажа и атак на защищённые сервера конкурентов.</p>
@@ -120,14 +120,14 @@
                         <img 
                         class="portfolio-img__icon"
                         srcset="
-                        /images/portfolio-desk/portfolio-2-desk-370@1x-min.jpg 370w,
-                        /images/portfolio-desk/portfolio-2-desk-740@2x-min.jpg 740w,
-                        /images/portfolio-tab/portfolio-2-tab-354@1x-min.jpg 354w, 
-                        /images/portfolio-tab/portfolio-2-tab-708@2x-min.jpg 708w,
-                        /images/portfolio-mob/portfolio-2-mob-450@1x-min.jpg 450w,
-                        /images/portfolio-mob/portfolio-2-mob-900@2x-min.jpg 900w"
+                        ./images/portfolio-desk/portfolio-2-desk-370@1x-min.jpg 370w,
+                        ./images/portfolio-desk/portfolio-2-desk-740@2x-min.jpg 740w,
+                        ./images/portfolio-tab/portfolio-2-tab-354@1x-min.jpg 354w, 
+                        ./images/portfolio-tab/portfolio-2-tab-708@2x-min.jpg 708w,
+                        ./images/portfolio-mob/portfolio-2-mob-450@1x-min.jpg 450w,
+                        ./images/portfolio-mob/portfolio-2-mob-900@2x-min.jpg 900w"
                         sizes="(min-width: 1200px) 370px, (min-width: 768px) 354px (min-width: 480px) 450px" 
-                        src="/images/portfolio-desk/portfolio-2-desk-370@1x-min.jpg" 
+                        src="./images/portfolio-desk/portfolio-2-desk-370@1x-min.jpg" 
                         alt="Постер двое играют в баскетбол">
                 <p class="portfolio-img__title">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового
                     шпионажа и атак на защищённые сервера конкурентов.</p>
@@ -145,14 +145,14 @@
                         <img 
                         class="portfolio-img__icon"
                         srcset="
-                        /images/portfolio-desk/portfolio-3-desk-370@1x-min.jpg 370w,
-                        /images/portfolio-desk/portfolio-3-desk-740@2x-min.jpg 740w,
-                        /images/portfolio-tab/portfolio-3-tab-354@1x-min.jpg 354w, 
-                        /images/portfolio-tab/portfolio-3-tab-708@2x-min.jpg 708w,
-                        /images/portfolio-mob/portfolio-3-mob-450@1x-min.jpg 450w,
-                        /images/portfolio-mob/portfolio-3-mob-900@2x-min.jpg 900w"
+                        ./images/portfolio-desk/portfolio-3-desk-370@1x-min.jpg 370w,
+                        ./images/portfolio-desk/portfolio-3-desk-740@2x-min.jpg 740w,
+                        ./images/portfolio-tab/portfolio-3-tab-354@1x-min.jpg 354w, 
+                        ./images/portfolio-tab/portfolio-3-tab-708@2x-min.jpg 708w,
+                        ./images/portfolio-mob/portfolio-3-mob-450@1x-min.jpg 450w,
+                        ./images/portfolio-mob/portfolio-3-mob-900@2x-min.jpg 900w"
                         sizes="(min-width: 1200px) 370px, (min-width: 768px) 354px (min-width: 480px) 450px" 
-                        src="/images/portfolio-desk/portfolio-3-desk-370@1x-min.jpg"
+                        src="./images/portfolio-desk/portfolio-3-desk-370@1x-min.jpg"
                         alt="Эмблема в виде звезды, ресторана морская еда">
                 <p class="portfolio-img__title">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового
                     шпионажа и атак на защищённые сервера конкурентов.</p>
@@ -170,14 +170,14 @@
                         <img 
                         class="portfolio-img__icon"
                         srcset="
-                        /images/portfolio-desk/portfolio-4-desk-370@1x-min.jpg 370w,
-                        /images/portfolio-desk/portfolio-4-desk-740@2x-min.jpg 740w,
-                        /images/portfolio-tab/portfolio-4-tab-354@1x-min.jpg 354w, 
-                        /images/portfolio-tab/portfolio-4-tab-708@2x-min.jpg 708w,
-                        /images/portfolio-mob/portfolio-4-mob-450@1x-min.jpg 450w,
-                        /images/portfolio-mob/portfolio-4-mob-900@2x-min.jpg 900w"
+                        ./images/portfolio-desk/portfolio-4-desk-370@1x-min.jpg 370w,
+                        ./images/portfolio-desk/portfolio-4-desk-740@2x-min.jpg 740w,
+                        ./images/portfolio-tab/portfolio-4-tab-354@1x-min.jpg 354w, 
+                        ./images/portfolio-tab/portfolio-4-tab-708@2x-min.jpg 708w,
+                        ./images/portfolio-mob/portfolio-4-mob-450@1x-min.jpg 450w,
+                        ./images/portfolio-mob/portfolio-4-mob-900@2x-min.jpg 900w"
                         sizes="(min-width: 1200px) 370px, (min-width: 768px) 354px (min-width: 480px) 450px" 
-                        src="/images/portfolio-desk/portfolio-4-desk-370@1x-min.jpg"
+                        src="./images/portfolio-desk/portfolio-4-desk-370@1x-min.jpg"
                         alt="Наушники">
                 <p class="portfolio-img__title">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового
                     шпионажа и атак на защищённые сервера конкурентов.</p>
@@ -195,14 +195,14 @@
                         <img 
                         class="portfolio-img__icon"
                         srcset="
-                        /images/portfolio-desk/portfolio-5-desk-370@1x-min.jpg 370w,
-                        /images/portfolio-desk/portfolio-5-desk-740@2x-min.jpg 740w,
-                        /images/portfolio-tab/portfolio-5-tab-354@1x-min.jpg 354w, 
-                        /images/portfolio-tab/portfolio-5-tab-708@2x-min.jpg 708w,
-                        /images/portfolio-mob/portfolio-5-mob-450@1x-min.jpg 450w,
-                        /images/portfolio-mob/portfolio-5-mob-900@2x-min.jpg 900w"
+                        ./images/portfolio-desk/portfolio-5-desk-370@1x-min.jpg 370w,
+                        ./images/portfolio-desk/portfolio-5-desk-740@2x-min.jpg 740w,
+                        ./images/portfolio-tab/portfolio-5-tab-354@1x-min.jpg 354w, 
+                        ./images/portfolio-tab/portfolio-5-tab-708@2x-min.jpg 708w,
+                        ./images/portfolio-mob/portfolio-5-mob-450@1x-min.jpg 450w,
+                        ./images/portfolio-mob/portfolio-5-mob-900@2x-min.jpg 900w"
                         sizes="(min-width: 1200px) 370px, (min-width: 768px) 354px (min-width: 480px) 450px" 
-                        src="/images/portfolio-desk/portfolio-5-desk-370@1x-min.jpg"
+                        src="./images/portfolio-desk/portfolio-5-desk-370@1x-min.jpg"
                         alt="Две стопки бумажек для заметок">
                 <p class="portfolio-img__title">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового
                     шпионажа и атак на защищённые сервера конкурентов.</p>
@@ -220,14 +220,14 @@
                         <img 
                         class="portfolio-img__icon"
                         srcset="
-                        /images/portfolio-desk/portfolio-6-desk-370@1x-min.jpg 370w,
-                        /images/portfolio-desk/portfolio-6-desk-740@2x-min.jpg 740w,
-                        /images/portfolio-tab/portfolio-6-tab-354@1x-min.jpg 354w, 
-                        /images/portfolio-tab/portfolio-6-tab-708@2x-min.jpg 708w,
-                        /images/portfolio-mob/portfolio-6-mob-450@1x-min.jpg 450w,
-                        /images/portfolio-mob/portfolio-6-mob-900@2x-min.jpg 900w"
+                        ./images/portfolio-desk/portfolio-6-desk-370@1x-min.jpg 370w,
+                        ./images/portfolio-desk/portfolio-6-desk-740@2x-min.jpg 740w,
+                        ./images/portfolio-tab/portfolio-6-tab-354@1x-min.jpg 354w, 
+                        ./images/portfolio-tab/portfolio-6-tab-708@2x-min.jpg 708w,
+                        ./images/portfolio-mob/portfolio-6-mob-450@1x-min.jpg 450w,
+                        ./images/portfolio-mob/portfolio-6-mob-900@2x-min.jpg 900w"
                         sizes="(min-width: 1200px) 370px, (min-width: 768px) 354px (min-width: 480px) 450px" 
-                        src="/images/portfolio-desk/portfolio-6-desk-370@1x-min.jpg"
+                        src="./images/portfolio-desk/portfolio-6-desk-370@1x-min.jpg"
                         alt="Монитор aplle">
                 <p class="portfolio-img__title">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового
                     шпионажа и атак на защищённые сервера конкурентов.</p>
@@ -245,14 +245,14 @@
                         <img 
                         class="portfolio-img__icon"
                         srcset="
-                        /images/portfolio-desk/portfolio-7-desk-370@1x-min.jpg 370w,
-                        /images/portfolio-desk/portfolio-7-desk-740@2x-min.jpg 740w,
-                        /images/portfolio-tab/portfolio-7-tab-354@1x-min.jpg 354w, 
-                        /images/portfolio-tab/portfolio-7-tab-708@2x-min.jpg 708w,
-                        /images/portfolio-mob/portfolio-7-mob-450@1x-min.jpg 450w,
-                        /images/portfolio-mob/portfolio-7-mob-900@2x-min.jpg 900w"
+                        ./images/portfolio-desk/portfolio-7-desk-370@1x-min.jpg 370w,
+                        ./images/portfolio-desk/portfolio-7-desk-740@2x-min.jpg 740w,
+                        ./images/portfolio-tab/portfolio-7-tab-354@1x-min.jpg 354w, 
+                        ./images/portfolio-tab/portfolio-7-tab-708@2x-min.jpg 708w,
+                        ./images/portfolio-mob/portfolio-7-mob-450@1x-min.jpg 450w,
+                        ./images/portfolio-mob/portfolio-7-mob-900@2x-min.jpg 900w"
                         sizes="(min-width: 1200px) 370px, (min-width: 768px) 354px (min-width: 480px) 450px" 
-                        src="/images/portfolio-desk/portfolio-7-desk-370@1x-min.jpg"
+                        src="./images/portfolio-desk/portfolio-7-desk-370@1x-min.jpg"
                         alt="открытая книга, лимитированого тиража">
                 <p class="portfolio-img__title">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового
                     шпионажа и атак на защищённые сервера конкурентов.</p>
@@ -270,14 +270,14 @@
                         <img 
                         class="portfolio-img__icon"
                         srcset="
-                        /images/portfolio-desk/portfolio-8-desk-370@1x-min.jpg 370w,
-                        /images/portfolio-desk/portfolio-8-desk-740@2x-min.jpg 740w,
-                        /images/portfolio-tab/portfolio-8-tab-354@1x-min.jpg 354w, 
-                        /images/portfolio-tab/portfolio-8-tab-708@2x-min.jpg 708w,
-                        /images/portfolio-mob/portfolio-8-mob-450@1x-min.jpg 450w,
-                        /images/portfolio-mob/portfolio-8-mob-900@2x-min.jpg 900w"
+                        ./images/portfolio-desk/portfolio-8-desk-370@1x-min.jpg 370w,
+                        ./images/portfolio-desk/portfolio-8-desk-740@2x-min.jpg 740w,
+                        ./images/portfolio-tab/portfolio-8-tab-354@1x-min.jpg 354w, 
+                        ./images/portfolio-tab/portfolio-8-tab-708@2x-min.jpg 708w,
+                        ./images/portfolio-mob/portfolio-8-mob-450@1x-min.jpg 450w,
+                        ./images/portfolio-mob/portfolio-8-mob-900@2x-min.jpg 900w"
                         sizes="(min-width: 1200px) 370px, (min-width: 768px) 354px (min-width: 480px) 450px" 
-                        src="/images/portfolio-desk/portfolio-8-desk-370@1x-min.jpg"
+                        src="./images/portfolio-desk/portfolio-8-desk-370@1x-min.jpg"
                         alt="Бирка LAB">
                 <p class="portfolio-img__title">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового
                     шпионажа и атак на защищённые сервера конкурентов.</p>
@@ -295,14 +295,14 @@
                         <img 
                         class="portfolio-img__icon"
                         srcset="
-                        /images/portfolio-desk/portfolio-9-desk-370@1x-min.jpg 370w,
-                        /images/portfolio-desk/portfolio-9-desk-740@2x-min.jpg 740w,
-                        /images/portfolio-tab/portfolio-9-tab-354@1x-min.jpg 354w, 
-                        /images/portfolio-tab/portfolio-9-tab-708@2x-min.jpg 708w,
-                        /images/portfolio-mob/portfolio-9-mob-450@1x-min.jpg 450w,
-                        /images/portfolio-mob/portfolio-9-mob-900@2x-min.jpg 900w"
+                        ./images/portfolio-desk/portfolio-9-desk-370@1x-min.jpg 370w,
+                        ./images/portfolio-desk/portfolio-9-desk-740@2x-min.jpg 740w,
+                        ./images/portfolio-tab/portfolio-9-tab-354@1x-min.jpg 354w, 
+                        ./images/portfolio-tab/portfolio-9-tab-708@2x-min.jpg 708w,
+                        ./images/portfolio-mob/portfolio-9-mob-450@1x-min.jpg 450w,
+                        ./images/portfolio-mob/portfolio-9-mob-900@2x-min.jpg 900w"
                         sizes="(min-width: 1200px) 370px, (min-width: 768px) 354px (min-width: 480px) 450px" 
-                        src="/images/portfolio-desk/portfolio-9-desk-370@1x-min.jpg"
+                        src="./images/portfolio-desk/portfolio-9-desk-370@1x-min.jpg"
                         alt="Ноутбук, и руки которые на нем печатают">
                 <p class="portfolio-img__title">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового
                     шпионажа и атак на защищённые сервера конкурентов.</p>
