--- a/index.html
+++ b/index.html
@@ -282,7 +282,7 @@
                 </ul>
               </div>
             </li>
-            <li class="team__foto">
+            <li class="team__foto team__foto--tab">
               <img class="team__img" 
               srcset="
               ./images/team-card3-270-desk@x1-min.jpg 270w,
@@ -335,7 +335,7 @@
                 </ul>
               </div>
             </li>
-            <li class="team__foto">
+            <li class="team__foto team__foto--tab">
               <img class="team__img" 
               srcset="
               ./images/team-card4-270-desk@x1-min.jpg 270w,
