--- a/portfolio.html
+++ b/portfolio.html
@@ -289,7 +289,7 @@
             </a>
         
             </li>
-            <li class="project__item">
+            <li class="project__item project__item--tab-last">
                 <a class="project__link" href="">
                     <div class="portfolio-img">
                         <img 
