--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
     <main>
       <!-- Секция ГЕРОЙ -->
 
-      <section class="section hero">
+      <section class="hero">
         <div class="hero__blok">
           <h1 class="hero__title">
             ЭФФЕКТИВНЫЕ РЕШЕНИЯ <br />
